fixed a bug that works section overlapped header

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -65,14 +65,9 @@ header.work-ph-header a#productHunt_msgif {
   width: 90%;
   margin: 0 auto;
   margin-top: 40px;
-  position: absolute;
-  left: 0;
 
   .introduction-inner {
-    // width: 90%;
-    // margin: 0 auto;
     h1 {
-      // width: 500px;
       font-size: 44px;
       font-family: var(--mainFont);
       font-weight: 400;
